--- a/pyheatmy2022/.gitignore
+++ b/pyheatmy2022/.gitignore
@@ -9,5 +9,7 @@ demo2022.ipynb
 demo_cas_test.ipynb
 demo_gen_test.ipynb
 demo_val_durect.ipynb
-/pyheatmy/__pycache__/
+pyheatmy\__pycache__
 __pycache__
+DREAM_v0.ipynb
+DREAM_v1.ipynb
