--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,8 @@
 .DS_Store
-*.DS_Store
 *.ipynb
 plot
-/.ipynb_checkpoints/
-/*/.ipynb_checkpoints/
+.ipynb_checkpoints/
 *.pyc
 __pycache__/
-/*/__pycache__/
-pyheatmy/pyheatmy/__pycache__
-pyheatmy/pyheatmy.egg-info/
-*/__pycache__
-*/*/__pycache__
-*/*/*/__pycache__
-*/*/*/*/__pycache__
-*/*/*/*/*/__pycache__
-*/.ipynb_checkpoints
-*/*/.ipynb_checkpoints
-*/*/*/.ipynb_checkpoints
-*/*/*/*/.ipynb_checkpoints
-*/*/*/*/*/.ipynb_checkpoints
+*.egg-info/
+build/
