--- a/pyheatmy/pyproject.toml
+++ b/pyheatmy/pyproject.toml
@@ -12,11 +12,14 @@ authors = [
   {name = "Youri Tchouboukoff", email = "youri.tchouboukoff@mines-paristech.fr"},
 ]
 dependencies = [
-    "numpy",
+    "matplotlib",
+    "scipy",
+    "pandas",
     "tqdm",
     "numba>=0.60",
     "psutil",
 ]
+requires-python = ">= 3.9"
 
 [project.urls]
 Homepage = "https://github.com/mathisbrdn/pyheatmy"
