--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Test Jupyter Notebooks
       if: matrix.module == 'pyheatmy'
       run: |
-        pytest --nbmake \
+        pytest --nbmake --nbmake-timeout=600 \
           pyheatmy/pyheatmy/DREAM_v1.ipynb \
           pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
       shell: bash
