--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,7 @@ jobs:
       if: matrix.module == 'pyheatmy'
       run: |
         pytest --nbmake --nbmake-timeout=600 \
+          pyheatmy/demoPyheatmy.ipynb \
           pyheatmy/pyheatmy/DREAM_v1.ipynb \
           pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
       shell: bash
