--- a/pyheatmy/pyproject.toml
+++ b/pyheatmy/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "psutil",
     "nbformat",
     "nbconvert",
-    "IPython"
+    "IPython",
+    "pytest",
+    "nbmake"
 ]
 requires-python = ">= 3.9"
 
