added serial monitor test

--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -37,6 +37,10 @@ build_src_filter =-<*> +<tests/Relay_Lora/**>
 ;build_type = debug
 build_src_filter =-<*> +<tests/Sensor_Lora/**>
 
+[env:test_serial_monitor]
+;build_type = debug
+build_src_filter =-<*> +<tests/test_serial_monitor/**>
+
 ;-----------------------------------------------------------------------------------------------------
 ;-----------------------------------------------------------------------------------------------------
 
