mise en forme Measure

--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -47,10 +47,14 @@ build_src_filter =-<*> +<tests/test_serial_monitor/**>
 [env:main_sensor]
 ;build_type = debug
 build_src_filter =-<*> +<field_code/mains_ino/sensor/**>
+upload_protocol = sam-ba
+upload_port = /dev/cu.usbmodem1101
 
 [env:main_relay]
 ;build_type = debug
 build_src_filter =-<*> +<field_code/mains_ino/relay/**>
+upload_protocol = sam-ba
+upload_port = /dev/cu.usbmodem1101
 
 [env:main_gateway]
 ;build_type = debug
