updated measure constructor and created sensor_demo environment

--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -76,3 +76,10 @@ build_src_filter =-<*> +<field_code/capteur_louise/**>
 [env:Time_test]
 ;build_type = debug
 build_src_filter =-<*> +<tests/libs_test/Time_test/**>
+
+;---------------------------------------------------------------
+;---------------------Demo codes--------------------------------
+;---------------------------------------------------------------
+
+[env:demo_sensor]
+build_src_filter = -<*> +<field_code/mains_ino/demo/demo_sensor/**>
