--- a/.github/workflows/hardware-validation.yml
+++ b/.github/workflows/hardware-validation.yml
@@ -37,14 +37,14 @@ jobs:
           echo "Checking Arduino file structure..."
           
           # Check if main Arduino files exist
-          if [ -f "hardware/sensors/temperature/Sensor/Sensor.ino" ]; then
-            echo "✓ Temperature sensor Arduino file exists"
+          if [ -f "hardware/field_code/mains_ino/sensor/Sensor.ino" ]; then
+            echo "✓ sensor Arduino file exists"
           else
-            echo "✗ Temperature sensor Arduino file missing"
+            echo "✗ sensor Arduino file missing"
             exit 1
           fi
           
-          if [ -f "hardware/relay/Relay/Relay.ino" ]; then
+          if [ -f "hardware/field_code/mains_ino/relay/Relay.ino" ]; then
             echo "✓ Relay Arduino file exists"
           else
             echo "✗ Relay Arduino file missing"
