--- a/Molonaviz/src/receiver/config.json
+++ b/Molonaviz/src/receiver/config.json
@@ -5,9 +5,9 @@
     "topic": "application/+/device/+/event/up",
     "client_id": "chirpstack_to_sqlite",
     "keepalive": 60,
-    "ca_cert": "MOLONARI1D/Molonaviz/src/molonaviz/TLS/CA.crt",
-    "client_cert": "MOLONARI1D/Molonaviz/src/molonaviz/TLS/TLS.crt",
-    "client_key": "MOLONARI1D/Molonaviz/src/molonaviz/TLS/TLS.key",
+    "ca_cert": "./src/receiver/TLS/CA.crt",
+    "client_cert": "./src/receiver/TLS/TLS.crt",
+    "client_key": "./src/receiver/TLS/TLS.key",
     "device_euis": [],
     "message_queue_max": 1000
   },
