added handshake_master and handshake_slave

--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -79,6 +79,11 @@ build_src_filter =-<*> +<field_code/capteur_louise/**>
 ;build_type = debug
 build_src_filter =-<*> +<tests/libs_test/Time_test/**>
 
+[env:handshake_master]
+build_src_filter =-<*> +<tests/test_handshake/handshake_master/**>
+
+[env:handshake_slave]
+build_src_filter =-<*> +<tests/test_handshake/handshake_slave/**>
 ;---------------------------------------------------------------
 ;---------------------Demo codes--------------------------------
 ;---------------------------------------------------------------
