Functional actual database insertion

--- a/Molonaviz/src/receiver/config.json
+++ b/Molonaviz/src/receiver/config.json
@@ -12,12 +12,7 @@
     "message_queue_max": 1000
   },
   "database": {
-    "filename": "./TestDatabase/raw_measurements.db",
-    "table": "RawMeasurements",
-    "realdb_config": {
-        "sampling_point_name" : "main-sampling",
-        "study_name" : "main-study",
-        "labo_id" : 1
-    }
+    "filename": "./TestDatabase/Molonari/Molonari.sqlite",
+    "table": "RawMeasurements"
   }
 }
