Forgot config.json modification

--- a/Molonaviz/src/receiver/settings/config.json
+++ b/Molonaviz/src/receiver/settings/config.json
@@ -12,9 +12,8 @@
     "message_queue_max": 1000
   },
   "database": {
-    "filename": "./TestDatabase/Molonari.sqlite",
-    "local_table": "RawMeasurements",
-    "real_database_insertion": true,
+    "filename": "./TestDatabase/Local.sqlite",
+    "real_database_insertion": false,
     "ERD_structure": "./src/receiver/settings/ERD_structure.sql"
   }
 }
