demo relay dans le ini

--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -90,3 +90,6 @@ build_src_filter =-<*> +<tests/test_handshake/handshake_slave/**>
 
 [env:demo_sensor]
 build_src_filter = -<*> +<field_code/mains_ino/demo/demo_sensor/**>
+
+[env:demo_relay]
+build_src_filter = -<*> + <field_code/mains_ino/demo/demo_relay/**>
