ini mis au propre pour l'année pro

--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -26,24 +26,9 @@ lib_deps =
   Queue
   RTCZero
   FlashStorage
-  ; our cusotom libraries :
-;  file://field_code/libs/LoRa_Molonari
-;  file://field_code/libs/LoRaWan_Molonari
-;  file://field_code/libs/shared/vrac/
 
-[env:test_Relay_Lora]
-;build_type = debug
-build_src_filter =-<*> +<tests/Relay_Lora/**>
 
-[env:test_Sensor_Lora]
-;build_type = debug
-build_src_filter =-<*> +<tests/Sensor_Lora/**>
 
-[env:test_serial_monitor]
-;build_type = debug
-build_src_filter =-<*> +<tests/test_serial_monitor/**>
-
-;-----------------------------------------------------------------------------------------------------
 ;-----------------------------------------------------------------------------------------------------
 
 [env:main_sensor]
@@ -58,19 +43,6 @@ build_src_filter =-<*> +<field_code/mains_ino/relay/**>
 upload_protocol = sam-ba
 upload_port = /dev/cu.usbmodem1101
 
-[env:main_gateway]
-;build_type = debug
-build_src_filter =-<*> +<field_code/mains_ino/gateway/**>
-
-[env:writer_lalie]
-;build_type = debug
-build_src_filter =-<*> +<field_code/libs/Writer/**>
-;build_src_filter =-<*> +<field_code/mains_ino/gateway/**>
-
-[env:capteur_louise]
-;build_type = debug
-build_src_filter =-<*> +<field_code/capteur_louise/**>
-
 ;---------------------------------------------------------------
 ;----------------Libraries Tests--------------------------------
 ;---------------------------------------------------------------
@@ -84,6 +56,21 @@ build_src_filter =-<*> +<tests/test_handshake/handshake_master/**>
 
 [env:handshake_slave]
 build_src_filter =-<*> +<tests/test_handshake/handshake_slave/**>
+
+;----------------Libraries Tests 2024---------------------------
+
+[env:test_Relay_Lora]
+;build_type = debug
+build_src_filter =-<*> +<tests/Relay_Lora/**>
+
+[env:test_Sensor_Lora]
+;build_type = debug
+build_src_filter =-<*> +<tests/Sensor_Lora/**>
+
+[env:test_serial_monitor]
+;build_type = debug
+build_src_filter =-<*> +<tests/test_serial_monitor/**>
+
 ;---------------------------------------------------------------
 ;---------------------Demo codes--------------------------------
 ;---------------------------------------------------------------
