transformation de field-code en firmware

--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
 name = "Molonary1D hardware code"
-lib_dir = field_code/libs/
+lib_dir = firmware/libs/
 
 src_dir = ./
 
@@ -33,13 +33,13 @@ lib_deps =
 
 [env:main_sensor]
 ;build_type = debug
-build_src_filter =-<*> +<field_code/mains_ino/sensor/**>
+build_src_filter =-<*> +<firmware/mains_ino/sensor/**>
 upload_protocol = sam-ba
 upload_port = /dev/cu.usbmodem1101
 
 [env:main_relay]
 ;build_type = debug
-build_src_filter =-<*> +<field_code/mains_ino/relay/**>
+build_src_filter =-<*> +<firmware/mains_ino/relay/**>
 upload_protocol = sam-ba
 upload_port = /dev/cu.usbmodem1101
 
@@ -76,7 +76,7 @@ build_src_filter =-<*> +<tests/test_serial_monitor/**>
 ;---------------------------------------------------------------
 
 [env:demo_sensor]
-build_src_filter = -<*> +<field_code/mains_ino/demo/demo_sensor/**>
+build_src_filter = -<*> +<firmware/mains_ino/demo/demo_sensor/**>
 
 [env:demo_relay]
-build_src_filter = -<*> +<field_code/mains_ino/demo/demo_relay/**>
+build_src_filter = -<*> +<firmware/mains_ino/demo/demo_relay/**>
