Fix Arduino file paths and comment out doc checks
Updated file paths for Arduino files and commented out documentation checks.

--- a/.github/workflows/hardware-validation.yml
+++ b/.github/workflows/hardware-validation.yml
@@ -24,14 +24,14 @@ jobs:
           echo "Checking Arduino file structure..."
           
           # Check if main Arduino files exist
-          if [ -f "hardware/field_code/mains_ino/sensor/sensor.ino" ]; then
+          if [ -f "hardware/firmware/mains_ino/sensor/sensor.ino" ]; then
             echo "✓ sensor Arduino file exists"
           else
             echo "✗ sensor Arduino file missing"
             exit 1
           fi
           
-          if [ -f "hardware/field_code/mains_ino/relay/Relay.ino" ]; then
+          if [ -f "hardware/firmware/mains_ino/relay/Relay.ino" ]; then
             echo "✓ Relay Arduino file exists"
           else
             echo "✗ Relay Arduino file missing"
@@ -43,11 +43,11 @@ jobs:
           echo "Checking hardware documentation..."
           
           # Check if key documentation files exist
-          for doc in "1 - Installation guide_ENG.md" "2 - Explaning the sensor code.md" "4 - Our LoRa protocol_ENG.md" "5 - Gateway and server configurations.md"; do
-            if [ -f "hardware/docs/$doc" ]; then
-              echo "✓ $doc exists"
-            else
-              echo "✗ $doc missing"
-              exit 1
-            fi
-          done
+         # for doc in "1 - Installation guide_ENG.md" "2 - Explaning the sensor code.md" "4 - Our LoRa protocol_ENG.md" "5 - Gateway and server configurations.md"; do
+          #  if [ -f "hardware/docs/$doc" ]; then
+           #   echo "✓ $doc exists"
+           # else
+            #  echo "✗ $doc missing"
+            #  exit 1
+           # fi
+         # done
