--- a/pyheatmy/pyproject.toml
+++ b/pyheatmy/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "nbconvert",
     "IPython",
     "pytest",
-    "nbmake"
+    "nbmake",
+    "sklearn"
 ]
 requires-python = ">= 3.9"
 
