removing dependency to sklearn in frequency.py

--- a/pyheatmy/pyproject.toml
+++ b/pyheatmy/pyproject.toml
@@ -22,8 +22,7 @@ dependencies = [
     "nbconvert",
     "IPython",
     "pytest",
-    "nbmake",
-    "sklearn"
+    "nbmake"
 ]
 requires-python = ">= 3.9"
 
